<resources>
    <string name="app_name">TipCalculator</string>
    <string name="title_activity_findrestaurant">findrestaurant</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_favorites">favorites</string>
    <string name="back">Back</string>
    <string name="refresh">refresh</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="change_location">Change Location</string>
    <string name="use_current_location">Use current location</string>
    <string name="loading">Loading</string>
    <string name="restaurant_name">RESTAURANT NAME</string>
    <string name="todo">TODO</string>
    <string name="your_rating">Your Rating</string>
    <string name="save">Save</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="get_directions">Get Directions</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="restaurantname">RestaurantName</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="user_location">USER LOCATION</string>
    <string name="set_location">Set Location</string>
    <string name="set_location_manually">Set Location Manually</string>
    <string name="set_location_automatically">Set Location Automatically</string>
    <string name="version_0_0_ui_designing">Version: 0.0 UI Designing</string>
    <string name="temporary">Temporary</string>
    <string name="favorites">Favorites</string>
    <string name="find_a_place_to_eat">Find a place to eat!</string>
    <string name="are_you_sure_you_want_to_remove_this_restaurant_from_favorite">Are you sure you want to remove this restaurant from favorite?</string>
    <string name="this_action_can_not_be_undone">This action can not be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="zip_code_hint">ZIP CODE</string>
</resources>